<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home_explore"
        android:icon="@drawable/ic_selector_selectable_home_me"
        android:title="@string/home_nav_explore"/>

    <item
        android:id="@+id/home_cycle"
        android:icon="@drawable/ic_selector_selectable_home_me"
        android:title="@string/home_nav_cycle"/>

    <item
        android:id="@+id/home_profile"
        android:icon="@drawable/ic_selector_selectable_home_me"
        android:title="@string/home_nav_profile"/>

    <!--测试-->
    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/ic_selector_selectable_home_index"
        android:title="@string/home_nav_index"/>
</menu>