<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--地图-->
    <com.amap.api.maps.MapView
        android:id="@+id/v_map"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </com.amap.api.maps.MapView>

    <!--地点搜索-->
    <android.support.v7.widget.CardView
        android:id="@+id/card_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_search"
                android:layout_gravity="center_vertical" />

            <TextView
                android:id="@+id/v_search"
                android:text="@string/search_destination"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                android:textStyle="bold"
                android:textColor="@color/color_999999"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <!--地图缩放-->
    <android.support.v7.widget.CardView
        android:id="@+id/card_zoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/btn_zoom_large"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_zoom_large"
                android:layout_gravity="center"
                android:padding="10dp" />

            <ImageView
                android:id="@+id/btn_zoom_small"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_zoom_small"
                android:layout_gravity="center"
                android:padding="8dp" />
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <!--当前位置信息-->
    <android.support.v7.widget.CardView
        android:id="@+id/info_card"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!--状态文案-->
            <TextView
                android:id="@+id/tv_status"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/white"
                android:background="@color/color_main"
                android:gravity="center"
                android:padding="16dp"
                tools:text="@string/locating" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <!--当前定位地点-->
                <TextView
                    android:id="@+id/tv_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:gravity="center_vertical"
                    android:textSize="18sp"
                    android:textColor="@color/color_333333"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:ellipsize="end"
                    tools:text="@string/app_name" />

                <!--经纬度信息-->
                <TextView
                    android:id="@+id/tv_location_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/color_999999"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:ellipsize="end"
                    tools:text="@string/app_name" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <!--当前位置-->
    <android.support.v7.widget.CardView
        android:layout_below="@id/card_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp">

        <ImageView
            android:id="@+id/btn_cur_loacation"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_cur_location"
            android:padding="8dp"/>

    </android.support.v7.widget.CardView>

    <!--导航相关-->
    <LinearLayout
        android:layout_above="@id/info_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">

        <android.support.v7.widget.CardView
            android:id="@+id/btn_start_navi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/color_main"
            app:cardCornerRadius="18dp"
            android:backgroundTint="@color/color_main">

            <TextView
                android:textColor="@color/white"
                android:text="@string/start_navi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"/>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/color_main"
            app:cardCornerRadius="18dp"
            android:layout_marginLeft="16dp"
            android:backgroundTint="@color/color_main"
            android:layout_marginStart="16dp">

            <TextView
                android:textColor="@color/white"
                android:text="@string/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"/>
        </android.support.v7.widget.CardView>

    </LinearLayout>

</RelativeLayout>