<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <!--标题栏-->
    <com.hjq.bar.TitleBar
        android:id="@+id/tb_cycle_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:backButton="false"
        android:background="@color/color_main"
        app:titleColor="@color/white"
        app:title="骑行"
        app:lineColor="@color/color_main"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingRight="50dp"
        android:paddingLeft="50dp"
        android:layout_marginBottom="20dp"
        android:background="@color/color_main"
        android:layout_weight="2">

        <!--仪表盘-->
        <com.nexuslink.alphrye.ui.weight.DashboardView
            android:id="@+id/v_dash_board"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </FrameLayout>

    <!--数据项-->
    <android.support.v7.widget.RecyclerView
        android:id="@+id/v_recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5">

    </android.support.v7.widget.RecyclerView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:textColor="@color/color_1DA1F2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="剩余电量"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:textColor="@color/color_main"
                android:id="@+id/v_battery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="36sp"
                tools:text="30%"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:textColor="@color/color_1DA1F2"
                android:id="@+id/v_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ride_time"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Chronometer
                android:id="@+id/v_chronometer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="36sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="当前时间"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/color_1DA1F2"/>

            <TextView
                android:textColor="@color/color_main"
                android:id="@+id/tv_cur_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="36sp"
                tools:text="00:00"/>

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <!--暂停或开始按钮-->
        <TextView
            android:id="@+id/btn_start_or_pause"
            android:text="@string/action_start"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:background="@drawable/bg_shape_start_or_pause"
            android:layout_marginLeft="72dp"
            android:layout_marginRight="72dp"/>

        <!--结束按钮-->
        <TextView
            android:id="@+id/btn_done"
            android:text="@string/action_done"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:background="@drawable/bg_shape_done"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:layout_toStartOf="@+id/btn_start_or_pause"
            android:layout_toLeftOf="@+id/btn_start_or_pause"
            android:visibility="visible"/>

        <TextView
            android:id="@+id/status_flash"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/safe"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@drawable/bg_shape_setting"
            android:layout_centerInParent="true"
            android:layout_toEndOf="@+id/btn_start_or_pause"
            android:layout_toRightOf="@+id/btn_start_or_pause"
            android:visibility="visible"
            android:textColor="@color/white"/>

        <TextView
            android:text="@string/safe"
            android:id="@+id/flashlight"
            android:layout_below="@id/status_flash"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/btn_start_or_pause"
            android:layout_toRightOf="@+id/btn_start_or_pause"
            android:gravity="center"
            android:layout_marginTop="8dp"/>
        <TextView
            android:visibility="gone"
            android:id="@+id/tv_debug"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.5"
            android:background="@color/color_main"
            android:textColor="@color/white"/>

        <LinearLayout
            android:id="@+id/v_test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/query"
                android:text="模拟位置查询"
                android:alpha="0.7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/beyound_speed"
                android:text="超速模拟"
                android:alpha="0.7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </RelativeLayout>

</LinearLayout>